# sqlalchemy-sqlflite-adbc-dialect

./: .gitignore  README.md  pyproject.toml  try_driver.py
.github/workflows/: ci.yml
src/sqlalchemy_adbc_flight_sql_driver/: __init__.py
src/sqlalchemy_flight_sql_adbc_dialect/: __init__.py  sqlalchemy_interfaces.py
src/sqlalchemy_gizmosql_adbc_dialect/: __init__.py
src/sqlalchemy_sqlflite_adbc_dialect/: __init__.py
tests/: basic_test.py  classes.py  conftest.py
